port to Dart 2.7

--- a/example/views/verify.html
+++ b/example/views/verify.html
@@ -15,6 +15,9 @@
         {{ . }}, 
         {{/ params.format}}
         </h3>
+    <h3>
+        Radio: {{# params.test}}{{ . }}{{/ params.test}}
+    </h3>
 
 
         
